add navigation-menu and searchable-products examples

--- a/filter-list/index.html
+++ b/filter-list/index.html
@@ -13,30 +13,16 @@
     <script type="text/jsx">
       var FilteredList = React.createClass({
         filterList: function(event){
-          var updatedList = this.state.initialItems;
-          updatedList = updatedList.filter(function(item){
-            return item.toLowerCase().search(
-              event.target.value.toLowerCase()) !== -1;
+          var query = event.target.value.toLowerCase();
+          var updatedList = this.props.initialItems.filter(function(item){
+            return item.toLowerCase().indexOf(query) !== -1;
           });
           this.setState({items: updatedList});
         },
         getInitialState: function(){
            return {
-             initialItems: [
-               "Apples",
-               "Broccoli",
-               "Chicken",
-               "Duck",
-               "Eggs",
-               "Fish",
-               "Granola",
-               "Hash Browns"
-             ],
-             items: []
+             items: this.props.initialItems
            }
-        },
-        componentWillMount: function(){
-          this.setState({items: this.state.initialItems})
         },
         render: function(){
           return (
@@ -62,7 +48,18 @@
         }
       });
 
-      React.renderComponent(<FilteredList/>, document.getElementById('container'));
+      var initialItems = [
+         "Apples",
+         "Broccoli",
+         "Chicken",
+         "Duck",
+         "Eggs",
+         "Fish",
+         "Granola",
+         "Hash Browns"
+       ];
+
+      React.renderComponent(<FilteredList initialItems={initialItems}/>, document.getElementById('container'));
     </script>
   </body>
 </html>
