--- a/filter-list/index.html
+++ b/filter-list/index.html
@@ -7,8 +7,10 @@
   <body>
     <h1>Filter Example with React</h1>
     <div id="container"></div>
+    <div id="container2"></div>
     
-    <script src="http://fb.me/react-0.12.2.min.js"></script>
+    <!-- <script src="http://fb.me/react-0.12.2.min.js"></script> -->
+    <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
     <script type="text/jsx">
       var FilteredList = React.createClass({
@@ -27,7 +29,7 @@
         render: function(){
           return (
             <div className="filter-list">
-              <input type="text" placeholder="Search" onChange={this.filterList}/>
+              <input type="text" placeholder="Search..." onChange={this.filterList}/>
             <List items={this.state.items}/>
             </div>
           );
@@ -59,7 +61,62 @@
          "Hash Browns"
        ];
 
-      React.renderComponent(<FilteredList initialItems={initialItems}/>, document.getElementById('container'));
+      React.render(
+        <FilteredList initialItems={initialItems}/>,
+       document.getElementById('container')
+      );
+    </script>
+    <script type="text/jsx">
+      // This example uses just one component
+      var SearchableItems = React.createClass({
+        getInitialState: function(){
+            return { searchString: '' };
+        },
+        handleChange: function(e){
+            this.setState({searchString:e.target.value});
+        },
+        render: function() {
+          var libraries = this.props.items;
+          var searchString = this.state.searchString.trim().toLowerCase();
+          if(searchString.length > 0){
+            libraries = libraries.filter(function(l){
+                return l.name.toLowerCase().match( searchString );
+            });
+          }
+          return (
+            <div>
+              <input type="text" value={this.state.searchString} onChange={this.handleChange} placeholder="Search..." />
+              <ul> 
+                { libraries.map(function(l){
+                    return <li key={l.name}>{l.name} <a href={l.url}>{l.url}</a></li>
+                }) }
+              </ul>
+            </div>
+          );
+        }
+      });
+                                                                                                                                                                   
+      var libraries = [
+        { name: 'Backbone.js', url: 'http://documentcloud.github.io/backbone/'},
+        { name: 'AngularJS', url: 'https://angularjs.org/'},
+        { name: 'jQuery', url: 'http://jquery.com/'},
+        { name: 'Prototype', url: 'http://www.prototypejs.org/'},
+        { name: 'React', url: 'http://facebook.github.io/react/'},
+        { name: 'Ember', url: 'http://emberjs.com/'},
+        { name: 'Knockout.js', url: 'http://knockoutjs.com/'},
+        { name: 'Dojo', url: 'http://dojotoolkit.org/'},
+        { name: 'Mootools', url: 'http://mootools.net/'},
+        { name: 'Underscore', url: 'http://documentcloud.github.io/underscore/'},
+        { name: 'Lodash', url: 'http://lodash.com/'},
+        { name: 'Moment', url: 'http://momentjs.com/'},
+        { name: 'Express', url: 'http://expressjs.com/'},
+        { name: 'Koa', url: 'http://koajs.com/'},
+      ];
+
+      React.render(
+        <SearchableItems items={ libraries } />,
+        document.getElementById('container2')
+      );
     </script>
   </body>
 </html>
