--- a/navigation-menu/index.html
+++ b/navigation-menu/index.html
@@ -37,7 +37,7 @@
           }
       });
 
-      React.renderComponent(
+      React.render(
           <NavMenu items={ ['Home', 'Services', 'About', 'Contact us'] } />,
           document.getElementById('container')
       );
